<resources>
    <string name="app_name">keep3</string>
    <string name="title_activity_register1">register1</string>
    <string name="title_activity_register4">register4</string>
    <string name="title_activity_register5">register5</string>

    <string name="weight">体重</string>
    <string name="hint_weight">你的体重</string>
    <string name="height">身高</string>
    <string name="hint_height">你的身高</string>


    <string name="bottom_train">运动</string>
    <string name="hot_course">热门课程</string>
    <string name="my_course">我的课程库</string>
    <string name="my_learned_course">我学过的课程</string>

    <string name="bottom_found">社区</string>
    <string name="bottom_me">我的</string>
    <string name="title_train">运动</string>
    <string name="title_found">社区</string>
    <string name="title_me">我的</string>
    <string name="title_food">饮食</string>
    <string name="bottom_food">饮食</string>
    <string name="exercises">训练</string>
    <string name="run">跑步</string>
    <string name="title_activity_course">course</string>
    <string name="toast_message">najndfj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>


</resources>
