<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingLeft="@dimen/dd_dimen_30px"/>

    <TextView
        android:layout_width="248dp"
        android:layout_height="182dp"
        android:layout_marginHorizontal="@dimen/dd_dimen_200px"
        android:gravity="center_vertical"
        android:text="完善个人信息"
        android:textColor="#111111"
        android:textSize="40dp" />

    <TextView
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/dd_dimen_200px"
        android:text="      填写个人信息有助于热量计算"
        android:textSize="15dp"
        android:layout_gravity="center_vertical"/>





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dd_dimen_30px"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/dd_dimen_30px">

        <TextView
            android:layout_width="@dimen/dd_dimen_200px"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/weight"
            android:textColor="@color/fuxk_base_color_gray_black" />

        <EditText
            android:id="@+id/reg_weight"
            style="@style/Fuxk_Base_Content_28_Style"
            android:layout_width="243dp"
            android:layout_height="43dp"
            android:layout_margin="@dimen/dd_dimen_6px"
            android:background="#ffffff"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal"
            android:paddingLeft="@dimen/dd_dimen_6px"
            android:paddingRight="@dimen/dd_dimen_6px" />

        <TextView
            android:layout_width="@dimen/dd_dimen_200px"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="KG"
            android:textColor="@color/fuxk_base_color_gray_black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="92dp"
        android:background="@color/fuxk_base_color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dd_dimen_30px"
        android:paddingTop="50dp"
        android:paddingRight="@dimen/dd_dimen_30px">

        <TextView
            android:layout_width="@dimen/dd_dimen_200px"
            android:layout_height="51dp"
            android:gravity="center_vertical"
            android:text="@string/height"
            android:textColor="@color/fuxk_base_color_gray_black" />

        <EditText
            android:id="@+id/reg_height"
            style="@style/Fuxk_Base_Content_28_Style"
            android:layout_width="247dp"
            android:layout_height="51dp"
            android:layout_margin="@dimen/dd_dimen_6px"
            android:background="#ffffff"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingLeft="@dimen/dd_dimen_6px"
            android:paddingRight="@dimen/dd_dimen_6px" />
        <TextView
            android:layout_width="@dimen/dd_dimen_200px"
            android:layout_height="51dp"
            android:gravity="center_vertical"
            android:text="CM"
            android:textColor="@color/fuxk_base_color_gray_black" />
    </LinearLayout>


    <Button
        android:id="@+id/reg_next"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/login_comfirm_button_margin_top"
        android:layout_marginTop="150dp"
        android:layout_marginRight="@dimen/login_comfirm_button_margin_top"
        android:layout_marginBottom="@dimen/login_comfirm_button_margin_top"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="下一步"
        android:textColor="@color/white"
        android:textSize="@dimen/login_comfirm_button_text_size" />







</LinearLayout>